--- a/test/fixtures/albums.yml
+++ b/test/fixtures/albums.yml
@@ -1,17 +1,17 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString1
-  artist: MyString2
+  title: MyString
+  artist: one
   composer: MyString
   genre: MyString
-  year: 2018-12-07
+  year: 2018-12-09
   comments: MyString
 
 two:
-  title: MyString3
-  artist: MyString4
+  title: MyString
+  artist: two
   composer: MyString
   genre: MyString
-  year: 2018-12-07
+  year: 2018-12-09
   comments: MyString
