--- a/test/fixtures/artists.yml
+++ b/test/fixtures/artists.yml
@@ -1,7 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  user: one
   name: MyString1
 
 two:
+  user: two
   name: MyString2
